Account controller overzicht toegevoegd

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,6 +17,7 @@
         </div>
         <br/>
         <a class="button center" th:href="@{/customers}">Klantoverzicht</a>
+        <a class="button center" th:href="@{/accounts}">Accountoverzicht</a>
     </div>
   </body>
 </html>
