Foutje op homepage gecorrigeerd

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
             <a class="button center" th:href="@{/customers}">Klantoverzicht</a>
             <a class="button center" th:href="@{/accounts}">Accountoverzicht</a>
             <a class="button center" th:href="@{/products}">Productoverzicht</a>
-            <a class="button center" th:href="@{/addresses">Addressoverzicht</a>
+            <a class="button center" th:href="@{/addresses}">Addressoverzicht</a>
         </div>
     </body>
 </html>
