Added classes to fill database using button on homepage. Changed main class and POM to handle conversion for LocalDateTime.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,6 +20,7 @@
             <a class="button center" th:href="@{/accounts}">Accountoverzicht</a>
             <a class="button center" th:href="@{/products}">Productoverzicht</a>
             <a class="button center" th:href="@{/addresses}">Addressoverzicht</a>
+            <a class="button center" th:href="@{/refreshdatabase}">DEVELOPMENT: vullen database met standaard data</a>
         </div>
     </body>
 </html>
