Simpele versie voor het toevoegen van een account

--- a/src/main/resources/templates/accounts.html
+++ b/src/main/resources/templates/accounts.html
@@ -6,7 +6,7 @@
   </head>
     <body>
         <div class="listTitle">
-        <h1 class="center">Accountoverzicht</h1>
+        <h1 class="center">Account overzicht</h1>
         
         <table id="accounts" class="table table-striped">
             <thead>
@@ -24,6 +24,8 @@
                 </tr>
             </tbody>            
         </table>
+        <br/>
+        <a class="button center" th:href="@{/accounts/add}">Account toevoegen</a>
       </div>
     </body>
 </html>
