--- a/src/main/resources/templates/addAccountForm.html
+++ b/src/main/resources/templates/addAccountForm.html
@@ -18,6 +18,12 @@
           </ul>
         </div>
         <div class="formfields">
+            <div class="errors" th:if="${#fields.hasErrors('*')}">
+                <ul>
+                    <li th:each="err : ${#fields.errors('*')}" 
+                        th:text="${err}">Veld onjuist ingevuld</li>
+                </ul>
+            </div>
             <label th:class="${#fields.hasErrors('username')}? 'error'">Account naam</label> 
                 <input type="text" th:field="*{username}"  
                      th:class="${#fields.hasErrors('username')}? 'error'" /><br/>
