--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -8,9 +8,10 @@
         <div class="listTitle">
         <h1 class="center"> Bestellingenoverzicht</h1>
         
-        <table id="customers" class="table table-striped">
+        <table id="orders" class="table table-striped">
             <thead>
                 <tr>
+                    <th>Naam Klant</th>
                     <th>Totaalprijs</th>
                     <th>Datum</th>
                     <th>Bestelstatus</th>
@@ -18,6 +19,7 @@
             </thead>
             <tbody>
                 <tr th:each="order:${orderList}">
+                    <td th:text="${order.customer.firstName + ' ' + order.customer.lastName}"></td>
                     <td th:text="${order.totalPrice}"></td>
                     <td th:text="${#temporals.format(order.dateTime, 'dd/MM/yyyy HH:mm')}"></td>
                     <td th:text="${order.orderStatus}"></td>
