Tonen van bestellingen uitgebreid met aparte schermen per OrderStatus en een overzicht van alle Orders

--- a/src/main/resources/templates/order/orders_inprogress.html
+++ b/src/main/resources/templates/order/orders_inprogress.html
@@ -6,7 +6,7 @@
   </head>
     <body>
         <div class="listTitle">
-        <h1 class="center"> Bestellingenoverzicht</h1>
+        <h1 class="center"> Bestellingenoverzicht: bestelstatus in behandeling</h1>
         
         <table id="orders" class="table table-striped">
             <thead>
