Het toevoegen van addNewProduct/addNewAddress pages

--- a/src/main/resources/templates/addresses.html
+++ b/src/main/resources/templates/addresses.html
@@ -23,7 +23,7 @@ and open the template in the editor.
                         <th>PostalCode</th>
                         <th>City</th>
                         <th>AddressType</th>
-                        <th>KlantName</th>
+                       <th>KlantName</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -38,6 +38,9 @@ and open the template in the editor.
                     </tr>
                 </tbody>            
             </table>
+        <br/>
+         <a class="button center" th:href="@{/addresses/add}">Nieuwe address toevoegen</a>
+         <a class="button center" th:href="@{/home}">Naar home pagina terug!</a>
         </div>
     </body>
 </html>
