--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -31,6 +31,9 @@ and open the template in the editor.
                 </tr>
             </tbody>            
         </table>
-      </div>
+        <br/>
+         <a class="button center" th:href="@{/products/add}">Nieuwe product toevoegen</a>
+         <a class="button center" th:href="@{/home}">Naar home pagina terug!</a>
+      </div> 
     </body>
 </html>
