--- a/src/main/resources/templates/order_menu.html
+++ b/src/main/resources/templates/order_menu.html
@@ -12,7 +12,7 @@
             <br/>        
             <div class="row">
                 <div class="col-md-12">
-                    <img class="homepage-img" src="../static/resources/images/kaas.jpg" th:src="@{/resources/images/kaas.jpg}"/>
+                    <img class="homepage-img" src="../static/images/kaas.jpg" th:src="@{/images/kaas.jpg}"/>
                 </div>
             </div>
             <br/>
