--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
             <br/>        
             <div class="row">
                 <div class="col-md-12">
-                    <img class="homepage-img" src="../static/resources/images/kaas.jpg" th:src="@{/resources/images/kaas.jpg}"/>
+                    <img class="homepage-img" src="../static/images/kaas.jpg" th:src="@{/images/kaas.jpg}"/>
                 </div>
             </div>
             <br/>
@@ -22,6 +22,7 @@
             <a class="button center" th:href="@{/addresses}">Addressoverzicht</a>
             <a class="button center" th:href="@{/orders}">Bestellingenoverzicht</a>
             <a class="button center" th:href="@{/refreshdatabase}">DEVELOPMENT: vullen database met standaard data</a>
+            <a class="button center red" th:href="@{/logout}">Uitloggen</a>
         </div>
     </body>
 </html>
