--- a/src/main/resources/templates/order_menu.html
+++ b/src/main/resources/templates/order_menu.html
@@ -7,19 +7,15 @@
     </head>
     <body>
         <h1 class="center">Menu bestellingen</h1>
+
         <br/>
         <div id="content">  
-            <br/>        
-            <div class="row">
-                <div class="col-md-12">
-                    <img class="homepage-img" src="../static/images/kaas.jpg" th:src="@{/images/kaas.jpg}"/>
-                </div>
-            </div>
-            <br/>
             <a class="button center" th:href="@{/orders/all_orders}">Alle bestellingen</a>
             <a class="button center" th:href="@{/orders/orderstatus_new}">Bestelstatus: nieuw</a>
             <a class="button center" th:href="@{/orders/orderstatus_inprogress}">Bestelstatus: in behandeling</a>
             <a class="button center" th:href="@{/orders/orderstatus_finished}">Bestelstatus: afgehandeld</a>
+            <a class="button center" th:href="@{/orders/show1order}">Toon 1 bestelling</a>
+            <a class="button center" th:href="@{/orders/startneworder}">Nieuwe bestelling plaatsen</a>
             <a class="button center" th:href="@{/}">Terug naar home</a>
         </div>
     </body>
