Toevoegen van een klant geimplementeerd en html templates voor account en customer in subfolders gezet

--- a/src/main/resources/templates/account/accounts.html
+++ b/src/main/resources/templates/account/accounts.html
@@ -26,6 +26,7 @@
         </table>
         <br/>
         <a class="button center" th:href="@{/accounts/add}">Account toevoegen</a>
+        <a class="button center" th:href="@{/home}">Home</a>
       </div>
     </body>
 </html>
