--- a/src/main/resources/templates/customer/customers.html
+++ b/src/main/resources/templates/customer/customers.html
@@ -24,6 +24,9 @@
                 </tr>
             </tbody>            
         </table>
+        <br/>
+        <a class="button center" th:href="@{/customers/add}">Klant toevoegen</a>
+        <a class="button center" th:href="@{/home}">Home</a>
       </div>
     </body>
 </html>
