--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -10,11 +10,11 @@
         
     <div class="row">
         <div class="col-md-12">
-            <img class="homepage-img" src="../static/images/kaas.jpg" th:src="@{/images/kaas.jpg}"/>
+            <img class="homepage-img" src="../static/images/muis.jpg" th:src="@{/images/muis.jpg}"/>
         </div>
     </div>
         <br/>
-        <h1 class="center">Oops, er ging iets mis!</h1>      
+        <h3 class="center">Oops, er ging iets mis!</h3>      
         <br/>
         <a class="button center" th:href="@{/home}">Homepage</a>
     </div>
