Toevoegen van Order uitgebreid met productkeuze bij invoeren OrderItem. Bij opslaan Order (inclusief al zijn orderItems) wordt productStock bijgewerkt

--- a/src/main/resources/templates/order/addOrder_noMoreProducts.html
+++ b/src/main/resources/templates/order/addOrder_noMoreProducts.html
@@ -28,12 +28,13 @@
         </table>
 
         <h2 class="center" th:text="${'Subtotaal bestelling: ' + order.totalPrice}"></h2>
-        
+        <br/>
+        <h2 class="center">Alle mogelijke producten zijn reeds toegevoegd.</h2>
+        <h2 class="center">Bestelregel toevoegen is niet meer mogelijk</h2>
         
         <div id="content">  
             <br/>        
 
-            <a class="button center" th:href="@{/orders/addorderitem}">Bestelregel toevoegen</a>
             <a class="button center" th:href="@{/orders/saveorder}">Bestelling opslaan</a>
             <a class="button center" th:href="@{/}">Terug naar home</a>
         </div>
