--- a/src/main/resources/templates/order/addNewOrderItem.html
+++ b/src/main/resources/templates/order/addNewOrderItem.html
@@ -13,28 +13,50 @@ and open the template in the editor.
     <body>
         <div id="content">
             <h1 class="center">Toevoegen nieuwe bestelregel</h1>
+            <h2 class="center">Beschikbare producten</h2>
             
-            <form method="POST" th:action="@{/orders/addorderitem}" th:object="${orderItem}"  >
+            <table id="productList" class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Product</th>
+                        <th>Prijs per stuk</th>
+                        <th>Voorraad</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="product:${productList}">
+                        <td th:text="${product.name}"></td>
+                        <td th:text="${product.price}"></td>
+                        <td th:text="${product.stock}"></td>
+                    </tr>
+                </tbody>            
+            </table>
+            <br/><br/>
+            
+            <form class="center" method="POST" th:action="@{/orders/addorderitem}" th:object="${orderItem}"  >
                <div class="errors" th:if="${#fields.hasErrors('*')}">
                     <ul>
                         <li th:each="err : ${#fields.errors('*')}" 
-                            th:text="${err}">Onjuiste invoer</li>
+                            th:text="${err}">Veld onjuist ingevuld</li>
                     </ul>
                 </div>
-                <!--<label th:class="${#fields.hasErrors('orderItem.product')}? 'error'">Productnaam</label>
-                <select th:field="*{orderItem.product}">
-                    <option th:each="dropDownItem : ${productList.name}"
-                                     th:value="${dropDownItem}"
-                                     th:text="${dropDownItem}" />
-                </select><br/><br/>-->
                 
-                <label th:class="${#fields.hasErrors('amount')}? 'error'">Aantal</label>: 
-                <input type="number" th:field="*{amount}" required="required"
+                <label><b>Product</b></label>: 
+                <select id="productList" th:field="*{product.id}">
+                    <option th:each="product : ${productList}"
+                                     th:value="${product.id}"
+                                     th:text="${product.name}"
+                                     />
+                </select><br/><br/>
+                
+                <label th:class="${#fields.hasErrors('amount')}? 'error'"><b>Aantal*</b></label>: 
+                <input type="number" min="0" th:field="*{amount}" required="required"
                        th:class="${#fields.hasErrors('amount')}? 'error'" /><br/><br/>
 
                 <input type="submit" value="Toevoegen" />
 
             </form>
+            <p class="center"><i>* Bij aantal = 0 keert u terug naar het overzicht van uw bestelling</i></p>
             
         </div>
     </body>
