--- a/src/main/resources/templates/order/orders_inprogress.html
+++ b/src/main/resources/templates/order/orders_inprogress.html
@@ -27,5 +27,11 @@
             </tbody>            
         </table>
       </div>
+        
+        <br/>
+        <div id="content">  
+            <br/>        
+            <a class="button center" th:href="@{/orders}">Terug naar menu bestellingen</a>
+        </div>
     </body>
 </html>
