Het toevoegen van ProductDeleteMethode met foutje

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -33,6 +33,7 @@ and open the template in the editor.
         </table>
         <br/>
          <a class="button center" th:href="@{/products/add}">Nieuwe product toevoegen</a>
+         <a class="button center" th:href="@{/products/delete}">Het verwijderen van een product</a>
          <a class="button center" th:href="@{/home}">Naar home pagina terug!</a>
       </div> 
     </body>
