Customer details overzicht toegevoegd

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -93,3 +93,13 @@ table, th, td {
 .small {
     width: 32px;
 }
+
+/* Tabellen details */
+.customers {
+
+    width: 600px;
+}
+
+.firstcol {
+    width: 300px;
+}
