--- a/src/main/resources/templates/customer/deleteCustomerForm.html
+++ b/src/main/resources/templates/customer/deleteCustomerForm.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="content">
-      <h1 class="center"> Account verwijderen</h1>
+      <h1 class="center">Klant verwijderen</h1>
   
       <form method="POST" th:action="@{/customers/delete}" th:object="${customer}">
         <div class="formfields">
