--- a/src/main/resources/templates/customer/customers.html
+++ b/src/main/resources/templates/customer/customers.html
@@ -16,6 +16,7 @@
                     <th>Accountnaam</th>
                     <th></th>
                     <th></th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -23,8 +24,11 @@
                     <td th:text="${customer.lastName}"></td>
                     <td th:text="${customer.firstName + ' ' + customer.lastNamePrefix}"></td>
                     <td th:text="${customer.account != null} ? ${customer.account.username} : 'Geen account'"></td>
+                    <td class="small">
+                        <a th:href="@{'/customers/details/' + ${customer.id}}"><img src="../images/search-icon.png" alt="details"/></a>
+                    </td>
                     <td class="small">              
-                            <a th:href="@{'/customers/edit/' + ${customer.id}}"><img src="../images/edit-icon.png" alt="edit"/></a>
+                        <a th:href="@{'/customers/edit/' + ${customer.id}}"><img src="../images/edit-icon.png" alt="edit"/></a>
                     </td>
                     <td class="small">
                         <a th:href="@{'/customers/delete/' + ${customer.id}}"><img src="../images/delete-icon.png" alt="delete"/></a>
