--- a/src/main/resources/templates/product/deleteProduct.html
+++ b/src/main/resources/templates/product/deleteProduct.html
@@ -12,8 +12,8 @@ and open the template in the editor.
     </head>
     <body>
         <div id="content">
-            <h1>Als u een product wilt verwijderen</h1><br/>
-            <h2>dan voeg het naam toe ... </h2>
+            <h1>Als u dit product wilt verwijderen</h1><br/>
+            <h2>Druk dan op delete knop ... </h2>
 
             <form method="POST" th:action="@{/products/delete}" th:object="${product}" >
 
