--- a/src/main/resources/templates/product/products.html
+++ b/src/main/resources/templates/product/products.html
@@ -22,6 +22,7 @@ and open the template in the editor.
                     <th>ProductPrice</th>
                     <th>Nr.Stock</th>
                      <th></th>
+                     <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -29,15 +30,18 @@ and open the template in the editor.
                     <td th:text="${product.name}"></td>
                     <td th:text="${product.price}"></td>
                     <td th:text="${product.stock}"></td>
-                    <td class="small">
-                        <a th:href="@{'/products/delete/' + ${product.id}}"><img src="../images/delete-icon.png" alt="delete"/></a>
+                    <td class="small"> 
+                        <a th:href="@{'/products/update/' + ${product.id}}"><input type="submit" value="update"/></a>
                     </td>
+                    <td class="small"> 
+                        <a th:href="@{'/products/delete/' + ${product.id}}"><input type="submit" value="delete"/></a>
+                    </td>
+                    
                 </tr>
             </tbody>            
         </table>
         <br/>
          <a class="button center" th:href="@{/products/add}">Nieuwe product toevoegen</a>
-         <!--<a class="button center" th:href="@{/products/delete}">Het verwijderen van een product</a>-->
          <a class="button center" th:href="@{/home}">Naar home pagina terug!</a>
       </div> 
     </body>
