--- a/src/main/resources/templates/order/showorders_new.html
+++ b/src/main/resources/templates/order/showorders_new.html
@@ -6,7 +6,7 @@
   </head>
     <body>
         <div class="listTitle">
-        <h1 class="center"> Bestellingenoverzicht: alle bestellingen</h1>
+        <h1 class="center"> Bestellingenoverzicht: bestelstatus nieuw</h1>
         
         <table id="orders" class="table table-striped">
             <thead>
@@ -15,6 +15,9 @@
                     <th>Totaalprijs</th>
                     <th>Datum</th>
                     <th>Bestelstatus</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -23,14 +26,25 @@
                     <td th:text="${order.totalPrice}"></td>
                     <td th:text="${#temporals.format(order.dateTime, 'dd/MM/yyyy HH:mm')}"></td>
                     <td th:text="${order.orderStatus}"></td>
+                    <td class="small">
+                        <a th:href="@{'/orders/details/' + ${order.id}}"><img src="../images/search-icon.png" alt="details"/></a>
+                    </td>
+                    <td class="small">              
+                        <a th:href="@{'/orders/edit/' + ${order.id}}"><img src="../images/edit-icon.png" alt="edit"/></a>
+                    </td>
+                    <td class="small">
+                        <a th:href="@{'/orders/delete/' + ${order.id}}"><img src="../images/delete-icon.png" alt="delete"/></a>
+                    </td>
                 </tr>
             </tbody>            
         </table>
       </div>
+        
         <br/>
         <div id="content">  
             <br/>        
             <a class="button center" th:href="@{/orders}">Terug naar menu bestellingen</a>
+            <a class="button center" th:href="@{/home}">Home</a>
         </div>
     </body>
 </html>
