--- a/src/main/resources/templates/product/deleteProduct.html
+++ b/src/main/resources/templates/product/deleteProduct.html
@@ -18,13 +18,13 @@ and open the template in the editor.
             <form method="POST" th:action="@{/products/delete}" th:object="${product}" >
 
                 <label>ProductID</label>:
-                <input type="text" th:field="*{id}" readonly='readonly' /><br/> <br/>        
+                <input type="number" th:field="*{id}" readonly='readonly' /><br/> <br/>        
                 
                 <label>ProductNaam</label>:                 
                 <input type="text" th:field="*{name}" readonly='readonly' /><br/><br/>
                 
                 <label>ProductPrice</label>:
-                <input type="text" th:field="*{price}" readonly='readonly' /><br/><br/>
+                <input type="text" th:field="*{price}" pattern="\d{2}.?\d{2}" readonly='readonly' /><br/><br/>
 
                 <label>Nr.Stock</label>: 
                 <input type="number" th:field="*{stock}" readonly='readonly'/><br/><br/>
