--- a/src/main/resources/templates/address/addNewAddress.html
+++ b/src/main/resources/templates/address/addNewAddress.html
@@ -46,7 +46,7 @@ and open the template in the editor.
                             th:text="${dropDownItem}" />
 
                 </select> <br/><br/>
-                <input type="submit" type="e" value="Toevoegen" />
+                <input type="submit"  value="Toevoegen" />
 
             </form>
         </div>
