Updating van een Address werkt goed

--- a/src/main/resources/templates/address/deleteAddress.html
+++ b/src/main/resources/templates/address/deleteAddress.html
@@ -31,7 +31,7 @@ and open the template in the editor.
 
                     <label>PostalCode</label>:                 
                     <input type="text" th:field="*{postalCode}" readonly='readonly' 
-                           pattern="[1-9][0-9]{3}\s?[a-zA-Z]{2}"/><br/><br>
+                           pattern="[1-9][0-9]{3}\s?[a-zA-Z]{2}"/><br/><br/>
 
                         <label>City</label>:                 
                         <input type="text" th:field="*{city}" readonly='readonly' /><br/><br/>    
