--- a/src/main/resources/templates/address/updateAddress.html
+++ b/src/main/resources/templates/address/updateAddress.html
@@ -26,11 +26,11 @@ and open the template in the editor.
                 <input type="number" th:field="*{number}" required="required" /><br/><br/>
 
                 <label>Addition</label>:                 
-                <input type="text" th:field="*{addition}" required="required"/><br/><br/>
+                <input type="text" th:field="*{addition}" /><br/><br/>
 
                 <label>PostalCode</label>:                 
                 <input type="text" th:field="*{postalCode}"  pattern="[1-9][0-9]{3}\s?[a-zA-Z]{2}" 
-                       required="required"/><br/><br>
+                       required="required"/><br/><br/>
                     <label>City</label>:                 
                     <input type="text" th:field="*{city}"  required="required"/><br/><br/> 
 
@@ -45,7 +45,7 @@ and open the template in the editor.
 
                     </select> <br/><br/>
 
-                    <input  type="submit" value="delete" />  
+                    <input  type="submit" value="wijzigen" />  
 
             </form>
         </div>
