Update om plaatje bij delete zichtbaar te maken in update_order_new.html

--- a/src/main/resources/templates/order/update_order_new.html
+++ b/src/main/resources/templates/order/update_order_new.html
@@ -53,7 +53,7 @@ and open the template in the editor.
                         <td th:text="${orderItem.amount}"></td>
                         <td th:text="${orderItem.subTotal}"></td>
                         <td class="small">
-                            <a th:href="@{'/orders/delete_orderitem/' + ${orderItem.id}}"><img src="../images/delete-icon.png" alt="delete"/></a>
+                            <a th:href="@{'/orders/delete_orderitem/' + ${orderItem.id}}"><img src="/../images/delete-icon.png" alt="delete"/></a>
                         </td>
                     </tr>
                 </tbody>            
