Pagina header bij het wijzigen van een klant aangepast van Account wijzigen naar Klant wijzigen

--- a/src/main/resources/templates/customer/editCustomerForm.html
+++ b/src/main/resources/templates/customer/editCustomerForm.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="content">
-      <h1 class="center"> Account wijzigen</h1>
+      <h1 class="center">Klant wijzigen</h1>
   
       <form method="POST" th:action="@{/customers/edit}" th:object="${customer}">
         <div class="formfields">
