--- a/src/main/resources/templates/order/addOrder.html
+++ b/src/main/resources/templates/order/addOrder.html
@@ -7,8 +7,28 @@
     </head>
     <body>
         <h1 class="center">Bestelling plaatsen</h1>
-        <br/>
-        <h2 class="center">Bestelde producten</h2>
+        
+        <br/><h2 class="center">Klant</h2>
+            
+            <table id="productList" class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Voornaam</th>
+                        <th>Achternaam</th>
+                        <th>Accountnaam</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td th:text="${order.customer.lastName}"></td>
+                        <td th:text="${order.customer.firstName + ' ' + order.customer.lastNamePrefix}"></td>
+                        <td th:text="${order.customer.account != null} ? ${order.customer.account.username} : 'Geen account'"></td>
+                    </tr>
+                </tbody>            
+            </table>
+        
+        <br/><h2 class="center">Bestelde producten</h2>
         
         <table id="orderItems" class="table table-striped">
             <thead>
@@ -27,7 +47,7 @@
             </tbody>            
         </table>
 
-        <h2 class="center" th:text="${'Subtotaal bestelling: ' + order.totalPrice}"></h2>
+        <br/><h2 class="center" th:text="${'Subtotaal bestelling: ' + order.totalPrice}"></h2>
         
         
         <div id="content">  
