--- a/src/main/resources/templates/order/showorders_all.html
+++ b/src/main/resources/templates/order/showorders_all.html
@@ -43,6 +43,7 @@
         <div id="content">  
             <br/>        
             <a class="button center" th:href="@{/orders}">Terug naar menu bestellingen</a>
+            <a class="button center" th:href="@{/home}">Home</a>
         </div>
     </body>
 </html>
